# wroot

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  build.sh  clean.sh  debug.sh  docker-compose.yml  install-dev.sh  run.sh  wRoot.json  wRoot.pro  wroot.pro
dev/: TODO.txt  benchmark.sh  build.sh  clean.sh  cluster-controller.js  cluster.txt  cpplint.sh  debug.sh  docker.ps1  docker.sh  install-dev.sh  run.sh
dev/cpplint/: output.txt
dev/manuals/: http_status_codes.txt
dev/test/: Requisição HTTP.jmx  load_test.jmx
dev/todo/dlang/: dmd.2.072.2.windows.7z.sig
download/zlib-1.2.11/: example  example64  examplesh  libz.so.1.2.11  minigzip  minigzip64  minigzipsh
src/: main.cpp
src/include/core/: Core.cpp  Core.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  HttpServer.cpp  HttpServer.hpp
src/include/database/: CustomDatabase.cpp  CustomDatabase.hpp  DAO.cpp  DAO.hpp  DTO.cpp  DTO.hpp  InformationSchema.cpp  InformationSchema.hpp  MysqlDatabase.cpp  MysqlDatabase.hpp  ResultSet.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp  TypeMapping.hpp
src/include/exceptions/http/: Forbidden.hpp  InternalServerError.hpp  NotFound.hpp  Unauthorized.hpp
src/include/exceptions/http/request/: FailedReceivingData.hpp  KeyNotFound.hpp  NullRequestException.hpp  RequestTimeoutException.hpp
src/include/exceptions/http/response/: InternalServerError.hpp  NotFound.hpp  Unauthorized.hpp
src/include/exceptions/lua/: LuaScriptException.hpp
src/include/helper/: ArduinoHelper.hpp  Base64.cpp  Base64.hpp  Chronometer.hpp  ConsoleLineHelper.cpp  ConsoleLineHelper.hpp  Crypto.cpp  Crypto.hpp  EnvironmentBuilder.cpp  EnvironmentBuilder.hpp  ExampleHelper.hpp  FileHelper.cpp  FileHelper.hpp  FunctionMap.cpp  FunctionMap.hpp  LuaHelper.cpp  LuaHelper.hpp  LuaScript.cpp  LuaScript.hpp  SerialConnector.cpp  SerialConnector.hpp  TestHelper.hpp  UrlRewriter.cpp  UrlRewriter.hpp  ValidationHelper.hpp
src/include/model/: BaseModel.hpp  Cluster.hpp  ClusterNode.hpp  User.hpp
src/include/network/: Connection.cpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp
src/include/network/http/: Header.hpp  HttpClient.cpp  HttpClient.hpp  KeyValuePair.hpp  MimeTypes.cpp  MimeTypes.hpp  Request.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.cpp  RequestParser.hpp  Response.cpp  Response.hpp  ResponseParser.hpp
src/include/repository/: BaseRepository.hpp  ClusterRepository.hpp
src/include/type/: Exception.cpp  Exception.hpp  Html.cpp  Html.hpp  HtmlElement.cpp  HtmlElement.hpp  Process.cpp  Process.hpp  Session.hpp  String.cpp  String.hpp  Timer.cpp  Timer.hpp  UrlRewriteRule.hpp  Xml.cpp  Xml.hpp  XmlCode.cpp  XmlCode.hpp
src/sample_app/: HttpSample.cpp  HttpSample.hpp
