cmake_minimum_required(VERSION 3.15)

project(wroot CXX)

set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/bin)
set(CMAKE_EXE_LINKER_FLAGS "-static-libgcc -static-libstdc++")
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
set(CMAKE_CXX_STANDARD 20)

include_directories("${PROJECT_SOURCE_DIR}/src")
include_directories("${PROJECT_SOURCE_DIR}/src/3rdParty")
include_directories("${PROJECT_SOURCE_DIR}/src/3rdParty/luacpp")

link_directories(${CMAKE_SOURCE_DIR}/src/3rdParty/lua)

set(SOURCES
        src/main.cpp
        src/include/helper/Base64.cpp
        src/3rdParty/zlib/ZLib.cpp
        src/include/helper/LuaScript.cpp
        src/include/helper/EnvironmentBuilder.cpp
        src/include/core/Core.cpp
        src/include/core/HttpRequest.cpp
        src/include/core/HttpResponse.cpp
        src/include/core/HttpServer.cpp
        src/include/helper/Crypto.cpp
        src/include/helper/FileHelper.cpp
        src/include/helper/FunctionMap.cpp
        src/include/helper/UrlRewriter.cpp
        src/include/library/CustomLibrary.cpp
        src/include/library/FileLibrary.cpp
        src/include/library/RouterLibrary.cpp
        src/include/type/Process.cpp
        src/include/type/String.cpp
        src/include/type/Timer.cpp
        src/sample_app/HttpSample.cpp)

set(HEADERS
        src/include/helper/Base64.hpp
        src/3rdParty/boost/config/abi/borland_prefix.hpp
        src/3rdParty/boost/config/abi/borland_suffix.hpp
        src/3rdParty/boost/config/abi/msvc_prefix.hpp
        src/3rdParty/boost/config/abi/msvc_suffix.hpp
        src/3rdParty/boost/config/compiler/borland.hpp
        src/3rdParty/boost/config/compiler/clang.hpp
        src/3rdParty/boost/config/compiler/codegear.hpp
        src/3rdParty/boost/config/compiler/comeau.hpp
        src/3rdParty/boost/config/compiler/common_edg.hpp
        src/3rdParty/boost/config/compiler/compaq_cxx.hpp
        src/3rdParty/boost/config/compiler/cray.hpp
        src/3rdParty/boost/config/compiler/digitalmars.hpp
        src/3rdParty/boost/config/compiler/gcc.hpp
        src/3rdParty/boost/config/compiler/gcc_xml.hpp
        src/3rdParty/boost/config/compiler/greenhills.hpp
        src/3rdParty/boost/config/compiler/hp_acc.hpp
        src/3rdParty/boost/config/compiler/intel.hpp
        src/3rdParty/boost/config/compiler/kai.hpp
        src/3rdParty/boost/config/compiler/metrowerks.hpp
        src/3rdParty/boost/config/compiler/mpw.hpp
        src/3rdParty/boost/config/compiler/nvcc.hpp
        src/3rdParty/boost/config/compiler/pathscale.hpp
        src/3rdParty/boost/config/compiler/pgi.hpp
        src/3rdParty/boost/config/compiler/sgi_mipspro.hpp
        src/3rdParty/boost/config/compiler/sunpro_cc.hpp
        src/3rdParty/boost/config/compiler/vacpp.hpp
        src/3rdParty/boost/config/compiler/visualc.hpp
        src/3rdParty/boost/config/compiler/xlcpp.hpp
        src/3rdParty/boost/config/no_tr1/cmath.hpp
        src/3rdParty/boost/config/no_tr1/complex.hpp
        src/3rdParty/boost/config/no_tr1/functional.hpp
        src/3rdParty/boost/config/no_tr1/memory.hpp
        src/3rdParty/boost/config/no_tr1/utility.hpp
        src/3rdParty/boost/config/platform/aix.hpp
        src/3rdParty/boost/config/platform/amigaos.hpp
        src/3rdParty/boost/config/platform/beos.hpp
        src/3rdParty/boost/config/platform/bsd.hpp
        src/3rdParty/boost/config/platform/cloudabi.hpp
        src/3rdParty/boost/config/platform/cray.hpp
        src/3rdParty/boost/config/platform/cygwin.hpp
        src/3rdParty/boost/config/platform/haiku.hpp
        src/3rdParty/boost/config/platform/hpux.hpp
        src/3rdParty/boost/config/platform/irix.hpp
        src/3rdParty/boost/config/platform/linux.hpp
        src/3rdParty/boost/config/platform/macos.hpp
        src/3rdParty/boost/config/platform/qnxnto.hpp
        src/3rdParty/boost/config/platform/solaris.hpp
        src/3rdParty/boost/config/platform/symbian.hpp
        src/3rdParty/boost/config/platform/vms.hpp
        src/3rdParty/boost/config/platform/vxworks.hpp
        src/3rdParty/boost/config/platform/win32.hpp
        src/3rdParty/boost/config/stdlib/dinkumware.hpp
        src/3rdParty/boost/config/stdlib/libcomo.hpp
        src/3rdParty/boost/config/stdlib/libcpp.hpp
        src/3rdParty/boost/config/stdlib/libstdcpp3.hpp
        src/3rdParty/boost/config/stdlib/modena.hpp
        src/3rdParty/boost/config/stdlib/msl.hpp
        src/3rdParty/boost/config/stdlib/roguewave.hpp
        src/3rdParty/boost/config/stdlib/sgi.hpp
        src/3rdParty/boost/config/stdlib/stlport.hpp
        src/3rdParty/boost/config/stdlib/vacpp.hpp
        src/3rdParty/boost/config/abi_prefix.hpp
        src/3rdParty/boost/config/abi_suffix.hpp
        src/3rdParty/boost/config/auto_link.hpp
        src/3rdParty/boost/config/posix_features.hpp
        src/3rdParty/boost/config/requires_threads.hpp
        src/3rdParty/boost/config/select_compiler_config.hpp
        src/3rdParty/boost/config/select_platform_config.hpp
        src/3rdParty/boost/config/select_stdlib_config.hpp
        src/3rdParty/boost/config/suffix.hpp
        src/3rdParty/boost/config/user.hpp
        src/3rdParty/boost/config/warning_disable.hpp
        src/3rdParty/boost/core/addressof.hpp
        src/3rdParty/boost/core/checked_delete.hpp
        src/3rdParty/boost/core/demangle.hpp
        src/3rdParty/boost/core/enable_if.hpp
        src/3rdParty/boost/core/explicit_operator_bool.hpp
        src/3rdParty/boost/core/ignore_unused.hpp
        src/3rdParty/boost/core/is_same.hpp
        src/3rdParty/boost/core/lightweight_test.hpp
        src/3rdParty/boost/core/lightweight_test_trait.hpp
        src/3rdParty/boost/core/no_exceptions_support.hpp
        src/3rdParty/boost/core/noncopyable.hpp
        src/3rdParty/boost/core/null_deleter.hpp
        src/3rdParty/boost/core/ref.hpp
        src/3rdParty/boost/core/scoped_enum.hpp
        src/3rdParty/boost/core/swap.hpp
        src/3rdParty/boost/core/typeinfo.hpp
        src/3rdParty/boost/core/underlying_type.hpp
        src/3rdParty/boost/detail/winapi/detail/cast_ptr.hpp
        src/3rdParty/boost/detail/winapi/access_rights.hpp
        src/3rdParty/boost/detail/winapi/apc.hpp
        src/3rdParty/boost/detail/winapi/basic_types.hpp
        src/3rdParty/boost/detail/winapi/character_code_conversion.hpp
        src/3rdParty/boost/detail/winapi/condition_variable.hpp
        src/3rdParty/boost/detail/winapi/config.hpp
        src/3rdParty/boost/detail/winapi/critical_section.hpp
        src/3rdParty/boost/detail/winapi/crypt.hpp
        src/3rdParty/boost/detail/winapi/dbghelp.hpp
        src/3rdParty/boost/detail/winapi/directory_management.hpp
        src/3rdParty/boost/detail/winapi/dll.hpp
        src/3rdParty/boost/detail/winapi/environment.hpp
        src/3rdParty/boost/detail/winapi/error_codes.hpp
        src/3rdParty/boost/detail/winapi/error_handling.hpp
        src/3rdParty/boost/detail/winapi/event.hpp
        src/3rdParty/boost/detail/winapi/file_management.hpp
        src/3rdParty/boost/detail/winapi/file_mapping.hpp
        src/3rdParty/boost/detail/winapi/get_current_process.hpp
        src/3rdParty/boost/detail/winapi/get_current_process_id.hpp
        src/3rdParty/boost/detail/winapi/get_current_thread.hpp
        src/3rdParty/boost/detail/winapi/get_current_thread_id.hpp
        src/3rdParty/boost/detail/winapi/get_last_error.hpp
        src/3rdParty/boost/detail/winapi/get_process_times.hpp
        src/3rdParty/boost/detail/winapi/get_system_directory.hpp
        src/3rdParty/boost/detail/winapi/get_thread_times.hpp
        src/3rdParty/boost/detail/winapi/GetCurrentProcess.hpp
        src/3rdParty/boost/detail/winapi/GetCurrentThread.hpp
        src/3rdParty/boost/detail/winapi/GetLastError.hpp
        src/3rdParty/boost/detail/winapi/GetProcessTimes.hpp
        src/3rdParty/boost/detail/winapi/GetThreadTimes.hpp
        src/3rdParty/boost/detail/winapi/handle_info.hpp
        src/3rdParty/boost/detail/winapi/handles.hpp
        src/3rdParty/boost/detail/winapi/heap_memory.hpp
        src/3rdParty/boost/detail/winapi/init_once.hpp
        src/3rdParty/boost/detail/winapi/jobs.hpp
        src/3rdParty/boost/detail/winapi/limits.hpp
        src/3rdParty/boost/detail/winapi/local_memory.hpp
        src/3rdParty/boost/detail/winapi/memory.hpp
        src/3rdParty/boost/detail/winapi/mutex.hpp
        src/3rdParty/boost/detail/winapi/overlapped.hpp
        src/3rdParty/boost/detail/winapi/page_protection_flags.hpp
        src/3rdParty/boost/detail/winapi/pipes.hpp
        src/3rdParty/boost/detail/winapi/priority_class.hpp
        src/3rdParty/boost/detail/winapi/process.hpp
        src/3rdParty/boost/detail/winapi/security.hpp
        src/3rdParty/boost/detail/winapi/semaphore.hpp
        src/3rdParty/boost/detail/winapi/shell.hpp
        src/3rdParty/boost/detail/winapi/show_window.hpp
        src/3rdParty/boost/detail/winapi/srw_lock.hpp
        src/3rdParty/boost/detail/winapi/synchronization.hpp
        src/3rdParty/boost/detail/winapi/system.hpp
        src/3rdParty/boost/detail/winapi/thread.hpp
        src/3rdParty/boost/detail/winapi/thread_pool.hpp
        src/3rdParty/boost/detail/winapi/time.hpp
        src/3rdParty/boost/detail/winapi/timers.hpp
        src/3rdParty/boost/detail/winapi/tls.hpp
        src/3rdParty/boost/detail/winapi/wait.hpp
        src/3rdParty/boost/detail/winapi/waitable_timer.hpp
        src/3rdParty/boost/detail/algorithm.hpp
        src/3rdParty/boost/detail/allocator_utilities.hpp
        src/3rdParty/boost/detail/atomic_count.hpp
        src/3rdParty/boost/detail/atomic_redef_macros.hpp
        src/3rdParty/boost/detail/atomic_undef_macros.hpp
        src/3rdParty/boost/detail/basic_pointerbuf.hpp
        src/3rdParty/boost/detail/binary_search.hpp
        src/3rdParty/boost/detail/bitmask.hpp
        src/3rdParty/boost/detail/call_traits.hpp
        src/3rdParty/boost/detail/catch_exceptions.hpp
        src/3rdParty/boost/detail/compressed_pair.hpp
        src/3rdParty/boost/detail/container_fwd.hpp
        src/3rdParty/boost/detail/dynamic_bitset.hpp
        src/3rdParty/boost/detail/endian.hpp
        src/3rdParty/boost/detail/fenv.hpp
        src/3rdParty/boost/detail/has_default_constructor.hpp
        src/3rdParty/boost/detail/identifier.hpp
        src/3rdParty/boost/detail/indirect_traits.hpp
        src/3rdParty/boost/detail/interlocked.hpp
        src/3rdParty/boost/detail/is_incrementable.hpp
        src/3rdParty/boost/detail/is_sorted.hpp
        src/3rdParty/boost/detail/is_xxx.hpp
        src/3rdParty/boost/detail/iterator.hpp
        src/3rdParty/boost/detail/lcast_precision.hpp
        src/3rdParty/boost/detail/lightweight_main.hpp
        src/3rdParty/boost/detail/lightweight_mutex.hpp
        src/3rdParty/boost/detail/lightweight_test.hpp
        src/3rdParty/boost/detail/lightweight_test_report.hpp
        src/3rdParty/boost/detail/lightweight_thread.hpp
        src/3rdParty/boost/detail/named_template_params.hpp
        src/3rdParty/boost/detail/no_exceptions_support.hpp
        src/3rdParty/boost/detail/numeric_traits.hpp
        src/3rdParty/boost/detail/ob_compressed_pair.hpp
        src/3rdParty/boost/detail/quick_allocator.hpp
        src/3rdParty/boost/detail/reference_content.hpp
        src/3rdParty/boost/detail/scoped_enum_emulation.hpp
        src/3rdParty/boost/detail/select_type.hpp
        src/3rdParty/boost/detail/sp_typeinfo.hpp
        src/3rdParty/boost/detail/templated_streams.hpp
        src/3rdParty/boost/detail/utf8_codecvt_facet.hpp
        src/3rdParty/boost/detail/workaround.hpp
        src/3rdParty/boost/exception/detail/clone_current_exception.hpp
        src/3rdParty/boost/exception/detail/error_info_impl.hpp
        src/3rdParty/boost/exception/detail/exception_ptr.hpp
        src/3rdParty/boost/exception/detail/is_output_streamable.hpp
        src/3rdParty/boost/exception/detail/object_hex_dump.hpp
        src/3rdParty/boost/exception/detail/type_info.hpp
        src/3rdParty/boost/exception/all.hpp
        src/3rdParty/boost/exception/current_exception_cast.hpp
        src/3rdParty/boost/exception/diagnostic_information.hpp
        src/3rdParty/boost/exception/enable_current_exception.hpp
        src/3rdParty/boost/exception/enable_error_info.hpp
        src/3rdParty/boost/exception/errinfo_api_function.hpp
        src/3rdParty/boost/exception/errinfo_at_line.hpp
        src/3rdParty/boost/exception/errinfo_errno.hpp
        src/3rdParty/boost/exception/errinfo_file_handle.hpp
        src/3rdParty/boost/exception/errinfo_file_name.hpp
        src/3rdParty/boost/exception/errinfo_file_open_mode.hpp
        src/3rdParty/boost/exception/errinfo_nested_exception.hpp
        src/3rdParty/boost/exception/errinfo_type_info_name.hpp
        src/3rdParty/boost/exception/error_info.hpp
        src/3rdParty/boost/exception/exception.hpp
        src/3rdParty/boost/exception/get_error_info.hpp
        src/3rdParty/boost/exception/info.hpp
        src/3rdParty/boost/exception/info_tuple.hpp
        src/3rdParty/boost/exception/N3757.hpp
        src/3rdParty/boost/exception/to_string.hpp
        src/3rdParty/boost/exception/to_string_stub.hpp
        src/3rdParty/boost/predef/architecture/x86/32.h
        src/3rdParty/boost/predef/architecture/x86/64.h
        src/3rdParty/boost/predef/architecture/alpha.h
        src/3rdParty/boost/predef/architecture/arm.h
        src/3rdParty/boost/predef/architecture/blackfin.h
        src/3rdParty/boost/predef/architecture/convex.h
        src/3rdParty/boost/predef/architecture/ia64.h
        src/3rdParty/boost/predef/architecture/m68k.h
        src/3rdParty/boost/predef/architecture/mips.h
        src/3rdParty/boost/predef/architecture/parisc.h
        src/3rdParty/boost/predef/architecture/ppc.h
        src/3rdParty/boost/predef/architecture/pyramid.h
        src/3rdParty/boost/predef/architecture/rs6k.h
        src/3rdParty/boost/predef/architecture/sparc.h
        src/3rdParty/boost/predef/architecture/superh.h
        src/3rdParty/boost/predef/architecture/sys370.h
        src/3rdParty/boost/predef/architecture/sys390.h
        src/3rdParty/boost/predef/architecture/x86.h
        src/3rdParty/boost/predef/architecture/z.h
        src/3rdParty/boost/predef/compiler/borland.h
        src/3rdParty/boost/predef/compiler/clang.h
        src/3rdParty/boost/predef/compiler/comeau.h
        src/3rdParty/boost/predef/compiler/compaq.h
        src/3rdParty/boost/predef/compiler/diab.h
        src/3rdParty/boost/predef/compiler/digitalmars.h
        src/3rdParty/boost/predef/compiler/dignus.h
        src/3rdParty/boost/predef/compiler/edg.h
        src/3rdParty/boost/predef/compiler/ekopath.h
        src/3rdParty/boost/predef/compiler/gcc.h
        src/3rdParty/boost/predef/compiler/gcc_xml.h
        src/3rdParty/boost/predef/compiler/greenhills.h
        src/3rdParty/boost/predef/compiler/hp_acc.h
        src/3rdParty/boost/predef/compiler/iar.h
        src/3rdParty/boost/predef/compiler/ibm.h
        src/3rdParty/boost/predef/compiler/intel.h
        src/3rdParty/boost/predef/compiler/kai.h
        src/3rdParty/boost/predef/compiler/llvm.h
        src/3rdParty/boost/predef/compiler/metaware.h
        src/3rdParty/boost/predef/compiler/metrowerks.h
        src/3rdParty/boost/predef/compiler/microtec.h
        src/3rdParty/boost/predef/compiler/mpw.h
        src/3rdParty/boost/predef/compiler/palm.h
        src/3rdParty/boost/predef/compiler/pgi.h
        src/3rdParty/boost/predef/compiler/sgi_mipspro.h
        src/3rdParty/boost/predef/compiler/sunpro.h
        src/3rdParty/boost/predef/compiler/tendra.h
        src/3rdParty/boost/predef/compiler/visualc.h
        src/3rdParty/boost/predef/compiler/watcom.h
        src/3rdParty/boost/predef/detail/_cassert.h
        src/3rdParty/boost/predef/detail/_exception.h
        src/3rdParty/boost/predef/detail/comp_detected.h
        src/3rdParty/boost/predef/detail/endian_compat.h
        src/3rdParty/boost/predef/detail/os_detected.h
        src/3rdParty/boost/predef/detail/platform_detected.h
        src/3rdParty/boost/predef/detail/test.h
        src/3rdParty/boost/predef/detail/test_def.h
        src/3rdParty/boost/predef/hardware/simd/arm/versions.h
        src/3rdParty/boost/predef/hardware/simd/ppc/versions.h
        src/3rdParty/boost/predef/hardware/simd/x86/versions.h
        src/3rdParty/boost/predef/hardware/simd/x86_amd/versions.h
        src/3rdParty/boost/predef/hardware/simd/arm.h
        src/3rdParty/boost/predef/hardware/simd/ppc.h
        src/3rdParty/boost/predef/hardware/simd/x86.h
        src/3rdParty/boost/predef/hardware/simd/x86_amd.h
        src/3rdParty/boost/predef/hardware/simd.h
        src/3rdParty/boost/predef/language/objc.h
        src/3rdParty/boost/predef/language/stdc.h
        src/3rdParty/boost/predef/language/stdcpp.h
        src/3rdParty/boost/predef/library/c/_prefix.h
        src/3rdParty/boost/predef/library/c/gnu.h
        src/3rdParty/boost/predef/library/c/uc.h
        src/3rdParty/boost/predef/library/c/vms.h
        src/3rdParty/boost/predef/library/c/zos.h
        src/3rdParty/boost/predef/library/std/_prefix.h
        src/3rdParty/boost/predef/library/std/cxx.h
        src/3rdParty/boost/predef/library/std/dinkumware.h
        src/3rdParty/boost/predef/library/std/libcomo.h
        src/3rdParty/boost/predef/library/std/modena.h
        src/3rdParty/boost/predef/library/std/msl.h
        src/3rdParty/boost/predef/library/std/roguewave.h
        src/3rdParty/boost/predef/library/std/sgi.h
        src/3rdParty/boost/predef/library/std/stdcpp3.h
        src/3rdParty/boost/predef/library/std/stlport.h
        src/3rdParty/boost/predef/library/std/vacpp.h
        src/3rdParty/boost/predef/library/c.h
        src/3rdParty/boost/predef/library/std.h
        src/3rdParty/boost/predef/os/bsd/bsdi.h
        src/3rdParty/boost/predef/os/bsd/dragonfly.h
        src/3rdParty/boost/predef/os/bsd/free.h
        src/3rdParty/boost/predef/os/bsd/net.h
        src/3rdParty/boost/predef/os/bsd/open.h
        src/3rdParty/boost/predef/os/aix.h
        src/3rdParty/boost/predef/os/amigaos.h
        src/3rdParty/boost/predef/os/android.h
        src/3rdParty/boost/predef/os/beos.h
        src/3rdParty/boost/predef/os/bsd.h
        src/3rdParty/boost/predef/os/cygwin.h
        src/3rdParty/boost/predef/os/haiku.h
        src/3rdParty/boost/predef/os/hpux.h
        src/3rdParty/boost/predef/os/ios.h
        src/3rdParty/boost/predef/os/irix.h
        src/3rdParty/boost/predef/os/linux.h
        src/3rdParty/boost/predef/os/macos.h
        src/3rdParty/boost/predef/os/os400.h
        src/3rdParty/boost/predef/os/qnxnto.h
        src/3rdParty/boost/predef/os/solaris.h
        src/3rdParty/boost/predef/os/unix.h
        src/3rdParty/boost/predef/os/vms.h
        src/3rdParty/boost/predef/os/windows.h
        src/3rdParty/boost/predef/other/endian.h
        src/3rdParty/boost/predef/platform/mingw.h
        src/3rdParty/boost/predef/platform/windows_desktop.h
        src/3rdParty/boost/predef/platform/windows_phone.h
        src/3rdParty/boost/predef/platform/windows_runtime.h
        src/3rdParty/boost/predef/platform/windows_store.h
        src/3rdParty/boost/predef/architecture.h
        src/3rdParty/boost/predef/compiler.h
        src/3rdParty/boost/predef/hardware.h
        src/3rdParty/boost/predef/language.h
        src/3rdParty/boost/predef/library.h
        src/3rdParty/boost/predef/make.h
        src/3rdParty/boost/predef/os.h
        src/3rdParty/boost/predef/other.h
        src/3rdParty/boost/predef/platform.h
        src/3rdParty/boost/predef/version.h
        src/3rdParty/boost/predef/version_number.h
        src/3rdParty/boost/smart_ptr/detail/array_allocator.hpp
        src/3rdParty/boost/smart_ptr/detail/array_count_impl.hpp
        src/3rdParty/boost/smart_ptr/detail/array_traits.hpp
        src/3rdParty/boost/smart_ptr/detail/array_utility.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_gcc.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_gcc_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_solaris.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_spin.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_win32.hpp
        src/3rdParty/boost/smart_ptr/detail/lightweight_mutex.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_nop.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_pthreads.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_win32_cs.hpp
        src/3rdParty/boost/smart_ptr/detail/operator_bool.hpp
        src/3rdParty/boost/smart_ptr/detail/quick_allocator.hpp
        src/3rdParty/boost/smart_ptr/detail/shared_count.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_convertible.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_acc_ia64.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_aix.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_clang.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_cw_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_cw_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_ia64.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_mips.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_sparc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_snc_ps3.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_solaris.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_spin.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_vacpp_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_w32.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_impl.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_disable_deprecated.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_forward.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_has_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_if_array.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_interlocked.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_nullptr_t.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_gcc_arm.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_pool.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_w32.hpp
        src/3rdParty/boost/smart_ptr/detail/yield_k.hpp
        src/3rdParty/boost/smart_ptr/allocate_shared_array.hpp
        src/3rdParty/boost/smart_ptr/bad_weak_ptr.hpp
        src/3rdParty/boost/smart_ptr/enable_shared_from_raw.hpp
        src/3rdParty/boost/smart_ptr/enable_shared_from_this.hpp
        src/3rdParty/boost/smart_ptr/intrusive_ptr.hpp
        src/3rdParty/boost/smart_ptr/intrusive_ref_counter.hpp
        src/3rdParty/boost/smart_ptr/make_shared.hpp
        src/3rdParty/boost/smart_ptr/make_shared_array.hpp
        src/3rdParty/boost/smart_ptr/make_shared_object.hpp
        src/3rdParty/boost/smart_ptr/make_unique.hpp
        src/3rdParty/boost/smart_ptr/owner_less.hpp
        src/3rdParty/boost/smart_ptr/scoped_array.hpp
        src/3rdParty/boost/smart_ptr/scoped_ptr.hpp
        src/3rdParty/boost/smart_ptr/shared_array.hpp
        src/3rdParty/boost/smart_ptr/shared_ptr.hpp
        src/3rdParty/boost/smart_ptr/weak_ptr.hpp
        src/3rdParty/boost/assert.hpp
        src/3rdParty/boost/checked_delete.hpp
        src/3rdParty/boost/config.hpp
        src/3rdParty/boost/current_function.hpp
        src/3rdParty/boost/predef.h
        src/3rdParty/boost/scoped_ptr.hpp
        src/3rdParty/boost/shared_ptr.hpp
        src/3rdParty/boost/smart_ptr.hpp
        src/3rdParty/boost/throw_exception.hpp
        src/3rdParty/luacpp/lua.hpp
        src/3rdParty/pthreads/pthread.h
        src/3rdParty/pthreads/sched.h
        src/3rdParty/pthreads/semaphore.h
        src/3rdParty/zlib/include/zconf.h
        src/3rdParty/zlib/include/zlib.h
        src/3rdParty/zlib/ZLib.hpp
        src/include/core/Core.hpp
        src/include/core/HttpRequest.hpp
        src/include/core/HttpResponse.hpp
        src/include/core/HttpServer.hpp
        src/include/helper/LuaScript.hpp
        src/include/helper/EnvironmentBuilder.hpp
        src/include/helper/Crypto.hpp
        src/include/helper/ExampleHelper.hpp
        src/include/helper/FileHelper.hpp
        src/include/helper/FunctionMap.hpp
        src/include/helper/TestHelper.hpp
        src/include/helper/ValidationHelper.hpp
        src/include/helper/UrlRewriter.hpp
        src/include/library/CustomLibrary.hpp
        src/include/library/FileLibrary.hpp
        src/include/library/RouterLibrary.hpp
        src/include/type/Process.hpp
        src/include/type/String.hpp
        src/include/type/Timer.hpp
        src/sample_app/HttpSample.hpp
        src/3rdParty/boost/config/abi/borland_prefix.hpp
        src/3rdParty/boost/config/abi/borland_suffix.hpp
        src/3rdParty/boost/config/abi/msvc_prefix.hpp
        src/3rdParty/boost/config/abi/msvc_suffix.hpp
        src/3rdParty/boost/config/compiler/borland.hpp
        src/3rdParty/boost/config/compiler/clang.hpp
        src/3rdParty/boost/config/compiler/codegear.hpp
        src/3rdParty/boost/config/compiler/comeau.hpp
        src/3rdParty/boost/config/compiler/common_edg.hpp
        src/3rdParty/boost/config/compiler/compaq_cxx.hpp
        src/3rdParty/boost/config/compiler/cray.hpp
        src/3rdParty/boost/config/compiler/digitalmars.hpp
        src/3rdParty/boost/config/compiler/gcc.hpp
        src/3rdParty/boost/config/compiler/gcc_xml.hpp
        src/3rdParty/boost/config/compiler/greenhills.hpp
        src/3rdParty/boost/config/compiler/hp_acc.hpp
        src/3rdParty/boost/config/compiler/intel.hpp
        src/3rdParty/boost/config/compiler/kai.hpp
        src/3rdParty/boost/config/compiler/metrowerks.hpp
        src/3rdParty/boost/config/compiler/mpw.hpp
        src/3rdParty/boost/config/compiler/nvcc.hpp
        src/3rdParty/boost/config/compiler/pathscale.hpp
        src/3rdParty/boost/config/compiler/pgi.hpp
        src/3rdParty/boost/config/compiler/sgi_mipspro.hpp
        src/3rdParty/boost/config/compiler/sunpro_cc.hpp
        src/3rdParty/boost/config/compiler/vacpp.hpp
        src/3rdParty/boost/config/compiler/visualc.hpp
        src/3rdParty/boost/config/compiler/xlcpp.hpp
        src/3rdParty/boost/config/no_tr1/cmath.hpp
        src/3rdParty/boost/config/no_tr1/complex.hpp
        src/3rdParty/boost/config/no_tr1/functional.hpp
        src/3rdParty/boost/config/no_tr1/memory.hpp
        src/3rdParty/boost/config/no_tr1/utility.hpp
        src/3rdParty/boost/config/platform/aix.hpp
        src/3rdParty/boost/config/platform/amigaos.hpp
        src/3rdParty/boost/config/platform/beos.hpp
        src/3rdParty/boost/config/platform/bsd.hpp
        src/3rdParty/boost/config/platform/cloudabi.hpp
        src/3rdParty/boost/config/platform/cray.hpp
        src/3rdParty/boost/config/platform/cygwin.hpp
        src/3rdParty/boost/config/platform/haiku.hpp
        src/3rdParty/boost/config/platform/hpux.hpp
        src/3rdParty/boost/config/platform/irix.hpp
        src/3rdParty/boost/config/platform/linux.hpp
        src/3rdParty/boost/config/platform/macos.hpp
        src/3rdParty/boost/config/platform/qnxnto.hpp
        src/3rdParty/boost/config/platform/solaris.hpp
        src/3rdParty/boost/config/platform/symbian.hpp
        src/3rdParty/boost/config/platform/vms.hpp
        src/3rdParty/boost/config/platform/vxworks.hpp
        src/3rdParty/boost/config/platform/win32.hpp
        src/3rdParty/boost/config/stdlib/dinkumware.hpp
        src/3rdParty/boost/config/stdlib/libcomo.hpp
        src/3rdParty/boost/config/stdlib/libcpp.hpp
        src/3rdParty/boost/config/stdlib/libstdcpp3.hpp
        src/3rdParty/boost/config/stdlib/modena.hpp
        src/3rdParty/boost/config/stdlib/msl.hpp
        src/3rdParty/boost/config/stdlib/roguewave.hpp
        src/3rdParty/boost/config/stdlib/sgi.hpp
        src/3rdParty/boost/config/stdlib/stlport.hpp
        src/3rdParty/boost/config/stdlib/vacpp.hpp
        src/3rdParty/boost/config/abi_prefix.hpp
        src/3rdParty/boost/config/abi_suffix.hpp
        src/3rdParty/boost/config/auto_link.hpp
        src/3rdParty/boost/config/posix_features.hpp
        src/3rdParty/boost/config/requires_threads.hpp
        src/3rdParty/boost/config/select_compiler_config.hpp
        src/3rdParty/boost/config/select_platform_config.hpp
        src/3rdParty/boost/config/select_stdlib_config.hpp
        src/3rdParty/boost/config/suffix.hpp
        src/3rdParty/boost/config/user.hpp
        src/3rdParty/boost/config/warning_disable.hpp
        src/3rdParty/boost/core/addressof.hpp
        src/3rdParty/boost/core/checked_delete.hpp
        src/3rdParty/boost/core/demangle.hpp
        src/3rdParty/boost/core/enable_if.hpp
        src/3rdParty/boost/core/explicit_operator_bool.hpp
        src/3rdParty/boost/core/ignore_unused.hpp
        src/3rdParty/boost/core/is_same.hpp
        src/3rdParty/boost/core/lightweight_test.hpp
        src/3rdParty/boost/core/lightweight_test_trait.hpp
        src/3rdParty/boost/core/no_exceptions_support.hpp
        src/3rdParty/boost/core/noncopyable.hpp
        src/3rdParty/boost/core/null_deleter.hpp
        src/3rdParty/boost/core/ref.hpp
        src/3rdParty/boost/core/scoped_enum.hpp
        src/3rdParty/boost/core/swap.hpp
        src/3rdParty/boost/core/typeinfo.hpp
        src/3rdParty/boost/core/underlying_type.hpp
        src/3rdParty/boost/detail/winapi/detail/cast_ptr.hpp
        src/3rdParty/boost/detail/winapi/access_rights.hpp
        src/3rdParty/boost/detail/winapi/apc.hpp
        src/3rdParty/boost/detail/winapi/basic_types.hpp
        src/3rdParty/boost/detail/winapi/character_code_conversion.hpp
        src/3rdParty/boost/detail/winapi/condition_variable.hpp
        src/3rdParty/boost/detail/winapi/config.hpp
        src/3rdParty/boost/detail/winapi/critical_section.hpp
        src/3rdParty/boost/detail/winapi/crypt.hpp
        src/3rdParty/boost/detail/winapi/dbghelp.hpp
        src/3rdParty/boost/detail/winapi/directory_management.hpp
        src/3rdParty/boost/detail/winapi/dll.hpp
        src/3rdParty/boost/detail/winapi/environment.hpp
        src/3rdParty/boost/detail/winapi/error_codes.hpp
        src/3rdParty/boost/detail/winapi/error_handling.hpp
        src/3rdParty/boost/detail/winapi/event.hpp
        src/3rdParty/boost/detail/winapi/file_management.hpp
        src/3rdParty/boost/detail/winapi/file_mapping.hpp
        src/3rdParty/boost/detail/winapi/get_current_process.hpp
        src/3rdParty/boost/detail/winapi/get_current_process_id.hpp
        src/3rdParty/boost/detail/winapi/get_current_thread.hpp
        src/3rdParty/boost/detail/winapi/get_current_thread_id.hpp
        src/3rdParty/boost/detail/winapi/get_last_error.hpp
        src/3rdParty/boost/detail/winapi/get_process_times.hpp
        src/3rdParty/boost/detail/winapi/get_system_directory.hpp
        src/3rdParty/boost/detail/winapi/get_thread_times.hpp
        src/3rdParty/boost/detail/winapi/GetCurrentProcess.hpp
        src/3rdParty/boost/detail/winapi/GetCurrentThread.hpp
        src/3rdParty/boost/detail/winapi/GetLastError.hpp
        src/3rdParty/boost/detail/winapi/GetProcessTimes.hpp
        src/3rdParty/boost/detail/winapi/GetThreadTimes.hpp
        src/3rdParty/boost/detail/winapi/handle_info.hpp
        src/3rdParty/boost/detail/winapi/handles.hpp
        src/3rdParty/boost/detail/winapi/heap_memory.hpp
        src/3rdParty/boost/detail/winapi/init_once.hpp
        src/3rdParty/boost/detail/winapi/jobs.hpp
        src/3rdParty/boost/detail/winapi/limits.hpp
        src/3rdParty/boost/detail/winapi/local_memory.hpp
        src/3rdParty/boost/detail/winapi/memory.hpp
        src/3rdParty/boost/detail/winapi/mutex.hpp
        src/3rdParty/boost/detail/winapi/overlapped.hpp
        src/3rdParty/boost/detail/winapi/page_protection_flags.hpp
        src/3rdParty/boost/detail/winapi/pipes.hpp
        src/3rdParty/boost/detail/winapi/priority_class.hpp
        src/3rdParty/boost/detail/winapi/process.hpp
        src/3rdParty/boost/detail/winapi/security.hpp
        src/3rdParty/boost/detail/winapi/semaphore.hpp
        src/3rdParty/boost/detail/winapi/shell.hpp
        src/3rdParty/boost/detail/winapi/show_window.hpp
        src/3rdParty/boost/detail/winapi/srw_lock.hpp
        src/3rdParty/boost/detail/winapi/synchronization.hpp
        src/3rdParty/boost/detail/winapi/system.hpp
        src/3rdParty/boost/detail/winapi/thread.hpp
        src/3rdParty/boost/detail/winapi/thread_pool.hpp
        src/3rdParty/boost/detail/winapi/time.hpp
        src/3rdParty/boost/detail/winapi/timers.hpp
        src/3rdParty/boost/detail/winapi/tls.hpp
        src/3rdParty/boost/detail/winapi/wait.hpp
        src/3rdParty/boost/detail/winapi/waitable_timer.hpp
        src/3rdParty/boost/detail/algorithm.hpp
        src/3rdParty/boost/detail/allocator_utilities.hpp
        src/3rdParty/boost/detail/atomic_count.hpp
        src/3rdParty/boost/detail/atomic_redef_macros.hpp
        src/3rdParty/boost/detail/atomic_undef_macros.hpp
        src/3rdParty/boost/detail/basic_pointerbuf.hpp
        src/3rdParty/boost/detail/binary_search.hpp
        src/3rdParty/boost/detail/bitmask.hpp
        src/3rdParty/boost/detail/call_traits.hpp
        src/3rdParty/boost/detail/catch_exceptions.hpp
        src/3rdParty/boost/detail/compressed_pair.hpp
        src/3rdParty/boost/detail/container_fwd.hpp
        src/3rdParty/boost/detail/dynamic_bitset.hpp
        src/3rdParty/boost/detail/endian.hpp
        src/3rdParty/boost/detail/fenv.hpp
        src/3rdParty/boost/detail/has_default_constructor.hpp
        src/3rdParty/boost/detail/identifier.hpp
        src/3rdParty/boost/detail/indirect_traits.hpp
        src/3rdParty/boost/detail/interlocked.hpp
        src/3rdParty/boost/detail/is_incrementable.hpp
        src/3rdParty/boost/detail/is_sorted.hpp
        src/3rdParty/boost/detail/is_xxx.hpp
        src/3rdParty/boost/detail/iterator.hpp
        src/3rdParty/boost/detail/lcast_precision.hpp
        src/3rdParty/boost/detail/lightweight_main.hpp
        src/3rdParty/boost/detail/lightweight_mutex.hpp
        src/3rdParty/boost/detail/lightweight_test.hpp
        src/3rdParty/boost/detail/lightweight_test_report.hpp
        src/3rdParty/boost/detail/lightweight_thread.hpp
        src/3rdParty/boost/detail/named_template_params.hpp
        src/3rdParty/boost/detail/no_exceptions_support.hpp
        src/3rdParty/boost/detail/numeric_traits.hpp
        src/3rdParty/boost/detail/ob_compressed_pair.hpp
        src/3rdParty/boost/detail/quick_allocator.hpp
        src/3rdParty/boost/detail/reference_content.hpp
        src/3rdParty/boost/detail/scoped_enum_emulation.hpp
        src/3rdParty/boost/detail/select_type.hpp
        src/3rdParty/boost/detail/sp_typeinfo.hpp
        src/3rdParty/boost/detail/templated_streams.hpp
        src/3rdParty/boost/detail/utf8_codecvt_facet.hpp
        src/3rdParty/boost/detail/workaround.hpp
        src/3rdParty/boost/exception/detail/clone_current_exception.hpp
        src/3rdParty/boost/exception/detail/error_info_impl.hpp
        src/3rdParty/boost/exception/detail/exception_ptr.hpp
        src/3rdParty/boost/exception/detail/is_output_streamable.hpp
        src/3rdParty/boost/exception/detail/object_hex_dump.hpp
        src/3rdParty/boost/exception/detail/type_info.hpp
        src/3rdParty/boost/exception/all.hpp
        src/3rdParty/boost/exception/current_exception_cast.hpp
        src/3rdParty/boost/exception/diagnostic_information.hpp
        src/3rdParty/boost/exception/enable_current_exception.hpp
        src/3rdParty/boost/exception/enable_error_info.hpp
        src/3rdParty/boost/exception/errinfo_api_function.hpp
        src/3rdParty/boost/exception/errinfo_at_line.hpp
        src/3rdParty/boost/exception/errinfo_errno.hpp
        src/3rdParty/boost/exception/errinfo_file_handle.hpp
        src/3rdParty/boost/exception/errinfo_file_name.hpp
        src/3rdParty/boost/exception/errinfo_file_open_mode.hpp
        src/3rdParty/boost/exception/errinfo_nested_exception.hpp
        src/3rdParty/boost/exception/errinfo_type_info_name.hpp
        src/3rdParty/boost/exception/error_info.hpp
        src/3rdParty/boost/exception/exception.hpp
        src/3rdParty/boost/exception/get_error_info.hpp
        src/3rdParty/boost/exception/info.hpp
        src/3rdParty/boost/exception/info_tuple.hpp
        src/3rdParty/boost/exception/N3757.hpp
        src/3rdParty/boost/exception/to_string.hpp
        src/3rdParty/boost/exception/to_string_stub.hpp
        src/3rdParty/boost/predef/architecture/x86/32.h
        src/3rdParty/boost/predef/architecture/x86/64.h
        src/3rdParty/boost/predef/architecture/alpha.h
        src/3rdParty/boost/predef/architecture/arm.h
        src/3rdParty/boost/predef/architecture/blackfin.h
        src/3rdParty/boost/predef/architecture/convex.h
        src/3rdParty/boost/predef/architecture/ia64.h
        src/3rdParty/boost/predef/architecture/m68k.h
        src/3rdParty/boost/predef/architecture/mips.h
        src/3rdParty/boost/predef/architecture/parisc.h
        src/3rdParty/boost/predef/architecture/ppc.h
        src/3rdParty/boost/predef/architecture/pyramid.h
        src/3rdParty/boost/predef/architecture/rs6k.h
        src/3rdParty/boost/predef/architecture/sparc.h
        src/3rdParty/boost/predef/architecture/superh.h
        src/3rdParty/boost/predef/architecture/sys370.h
        src/3rdParty/boost/predef/architecture/sys390.h
        src/3rdParty/boost/predef/architecture/x86.h
        src/3rdParty/boost/predef/architecture/z.h
        src/3rdParty/boost/predef/compiler/borland.h
        src/3rdParty/boost/predef/compiler/clang.h
        src/3rdParty/boost/predef/compiler/comeau.h
        src/3rdParty/boost/predef/compiler/compaq.h
        src/3rdParty/boost/predef/compiler/diab.h
        src/3rdParty/boost/predef/compiler/digitalmars.h
        src/3rdParty/boost/predef/compiler/dignus.h
        src/3rdParty/boost/predef/compiler/edg.h
        src/3rdParty/boost/predef/compiler/ekopath.h
        src/3rdParty/boost/predef/compiler/gcc.h
        src/3rdParty/boost/predef/compiler/gcc_xml.h
        src/3rdParty/boost/predef/compiler/greenhills.h
        src/3rdParty/boost/predef/compiler/hp_acc.h
        src/3rdParty/boost/predef/compiler/iar.h
        src/3rdParty/boost/predef/compiler/ibm.h
        src/3rdParty/boost/predef/compiler/intel.h
        src/3rdParty/boost/predef/compiler/kai.h
        src/3rdParty/boost/predef/compiler/llvm.h
        src/3rdParty/boost/predef/compiler/metaware.h
        src/3rdParty/boost/predef/compiler/metrowerks.h
        src/3rdParty/boost/predef/compiler/microtec.h
        src/3rdParty/boost/predef/compiler/mpw.h
        src/3rdParty/boost/predef/compiler/palm.h
        src/3rdParty/boost/predef/compiler/pgi.h
        src/3rdParty/boost/predef/compiler/sgi_mipspro.h
        src/3rdParty/boost/predef/compiler/sunpro.h
        src/3rdParty/boost/predef/compiler/tendra.h
        src/3rdParty/boost/predef/compiler/visualc.h
        src/3rdParty/boost/predef/compiler/watcom.h
        src/3rdParty/boost/predef/detail/_cassert.h
        src/3rdParty/boost/predef/detail/_exception.h
        src/3rdParty/boost/predef/detail/comp_detected.h
        src/3rdParty/boost/predef/detail/endian_compat.h
        src/3rdParty/boost/predef/detail/os_detected.h
        src/3rdParty/boost/predef/detail/platform_detected.h
        src/3rdParty/boost/predef/detail/test.h
        src/3rdParty/boost/predef/detail/test_def.h
        src/3rdParty/boost/predef/hardware/simd/arm/versions.h
        src/3rdParty/boost/predef/hardware/simd/ppc/versions.h
        src/3rdParty/boost/predef/hardware/simd/x86/versions.h
        src/3rdParty/boost/predef/hardware/simd/x86_amd/versions.h
        src/3rdParty/boost/predef/hardware/simd/arm.h
        src/3rdParty/boost/predef/hardware/simd/ppc.h
        src/3rdParty/boost/predef/hardware/simd/x86.h
        src/3rdParty/boost/predef/hardware/simd/x86_amd.h
        src/3rdParty/boost/predef/hardware/simd.h
        src/3rdParty/boost/predef/language/objc.h
        src/3rdParty/boost/predef/language/stdc.h
        src/3rdParty/boost/predef/language/stdcpp.h
        src/3rdParty/boost/predef/library/c/_prefix.h
        src/3rdParty/boost/predef/library/c/gnu.h
        src/3rdParty/boost/predef/library/c/uc.h
        src/3rdParty/boost/predef/library/c/vms.h
        src/3rdParty/boost/predef/library/c/zos.h
        src/3rdParty/boost/predef/library/std/_prefix.h
        src/3rdParty/boost/predef/library/std/cxx.h
        src/3rdParty/boost/predef/library/std/dinkumware.h
        src/3rdParty/boost/predef/library/std/libcomo.h
        src/3rdParty/boost/predef/library/std/modena.h
        src/3rdParty/boost/predef/library/std/msl.h
        src/3rdParty/boost/predef/library/std/roguewave.h
        src/3rdParty/boost/predef/library/std/sgi.h
        src/3rdParty/boost/predef/library/std/stdcpp3.h
        src/3rdParty/boost/predef/library/std/stlport.h
        src/3rdParty/boost/predef/library/std/vacpp.h
        src/3rdParty/boost/predef/library/c.h
        src/3rdParty/boost/predef/library/std.h
        src/3rdParty/boost/predef/os/bsd/bsdi.h
        src/3rdParty/boost/predef/os/bsd/dragonfly.h
        src/3rdParty/boost/predef/os/bsd/free.h
        src/3rdParty/boost/predef/os/bsd/net.h
        src/3rdParty/boost/predef/os/bsd/open.h
        src/3rdParty/boost/predef/os/aix.h
        src/3rdParty/boost/predef/os/amigaos.h
        src/3rdParty/boost/predef/os/android.h
        src/3rdParty/boost/predef/os/beos.h
        src/3rdParty/boost/predef/os/bsd.h
        src/3rdParty/boost/predef/os/cygwin.h
        src/3rdParty/boost/predef/os/haiku.h
        src/3rdParty/boost/predef/os/hpux.h
        src/3rdParty/boost/predef/os/ios.h
        src/3rdParty/boost/predef/os/irix.h
        src/3rdParty/boost/predef/os/linux.h
        src/3rdParty/boost/predef/os/macos.h
        src/3rdParty/boost/predef/os/os400.h
        src/3rdParty/boost/predef/os/qnxnto.h
        src/3rdParty/boost/predef/os/solaris.h
        src/3rdParty/boost/predef/os/unix.h
        src/3rdParty/boost/predef/os/vms.h
        src/3rdParty/boost/predef/os/windows.h
        src/3rdParty/boost/predef/other/endian.h
        src/3rdParty/boost/predef/platform/mingw.h
        src/3rdParty/boost/predef/platform/windows_desktop.h
        src/3rdParty/boost/predef/platform/windows_phone.h
        src/3rdParty/boost/predef/platform/windows_runtime.h
        src/3rdParty/boost/predef/platform/windows_store.h
        src/3rdParty/boost/predef/architecture.h
        src/3rdParty/boost/predef/compiler.h
        src/3rdParty/boost/predef/hardware.h
        src/3rdParty/boost/predef/language.h
        src/3rdParty/boost/predef/library.h
        src/3rdParty/boost/predef/make.h
        src/3rdParty/boost/predef/os.h
        src/3rdParty/boost/predef/other.h
        src/3rdParty/boost/predef/platform.h
        src/3rdParty/boost/predef/version.h
        src/3rdParty/boost/predef/version_number.h
        src/3rdParty/boost/smart_ptr/detail/array_allocator.hpp
        src/3rdParty/boost/smart_ptr/detail/array_count_impl.hpp
        src/3rdParty/boost/smart_ptr/detail/array_traits.hpp
        src/3rdParty/boost/smart_ptr/detail/array_utility.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_gcc.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_gcc_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_solaris.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_spin.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/atomic_count_win32.hpp
        src/3rdParty/boost/smart_ptr/detail/lightweight_mutex.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_nop.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_pthreads.hpp
        src/3rdParty/boost/smart_ptr/detail/lwm_win32_cs.hpp
        src/3rdParty/boost/smart_ptr/detail/operator_bool.hpp
        src/3rdParty/boost/smart_ptr/detail/quick_allocator.hpp
        src/3rdParty/boost/smart_ptr/detail/shared_count.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_convertible.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_acc_ia64.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_aix.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_clang.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_cw_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_cw_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_ia64.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_mips.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_sparc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_gcc_x86.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_snc_ps3.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_solaris.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_spin.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_vacpp_ppc.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_base_w32.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_counted_impl.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_disable_deprecated.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_forward.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_has_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_if_array.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_interlocked.hpp
        src/3rdParty/boost/smart_ptr/detail/sp_nullptr_t.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_gcc_arm.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_nt.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_pool.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_pt.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_std_atomic.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_sync.hpp
        src/3rdParty/boost/smart_ptr/detail/spinlock_w32.hpp
        src/3rdParty/boost/smart_ptr/detail/yield_k.hpp
        src/3rdParty/boost/smart_ptr/allocate_shared_array.hpp
        src/3rdParty/boost/smart_ptr/bad_weak_ptr.hpp
        src/3rdParty/boost/smart_ptr/enable_shared_from_raw.hpp
        src/3rdParty/boost/smart_ptr/enable_shared_from_this.hpp
        src/3rdParty/boost/smart_ptr/intrusive_ptr.hpp
        src/3rdParty/boost/smart_ptr/intrusive_ref_counter.hpp
        src/3rdParty/boost/smart_ptr/make_shared.hpp
        src/3rdParty/boost/smart_ptr/make_shared_array.hpp
        src/3rdParty/boost/smart_ptr/make_shared_object.hpp
        src/3rdParty/boost/smart_ptr/make_unique.hpp
        src/3rdParty/boost/smart_ptr/owner_less.hpp
        src/3rdParty/boost/smart_ptr/scoped_array.hpp
        src/3rdParty/boost/smart_ptr/scoped_ptr.hpp
        src/3rdParty/boost/smart_ptr/shared_array.hpp
        src/3rdParty/boost/smart_ptr/shared_ptr.hpp
        src/3rdParty/boost/smart_ptr/weak_ptr.hpp
        src/3rdParty/boost/assert.hpp
        src/3rdParty/boost/checked_delete.hpp
        src/3rdParty/boost/config.hpp
        src/3rdParty/boost/current_function.hpp
        src/3rdParty/boost/predef.h
        src/3rdParty/boost/scoped_ptr.hpp
        src/3rdParty/boost/shared_ptr.hpp
        src/3rdParty/boost/smart_ptr.hpp
        src/3rdParty/boost/throw_exception.hpp
        src/include/exceptions/http/response/NotFound.hpp
        src/include/exceptions/http/response/Forbidden.hpp
        src/include/exceptions/http/response/InternalServerError.hpp
        src/include/exceptions/http/response/Unauthorized.hpp
        src/include/exceptions/http/request/KeyNotFound.hpp
        src/include/exceptions/http/request/FailedReceivingData.hpp
        src/include/exceptions/lua/LuaScriptException.hpp)

add_executable(wroot ${SOURCES} ${HEADERS})

## Link libraries
target_link_libraries(wroot stdc++ stdc++fs pthread z lua ${CMAKE_DL_LIBS})